<resources>
    <string name="app_name">Friender</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">First Fragment</string>
    <string name="home_profile_fragment_label">Second Fragment</string>

    <!-- Strings used for bottom navigation bar destinations -->
    <string name="bottom_nav_tab1">Discover</string>
    <string name="bottom_nav_tab2">Friends</string>
    <string name="bottom_nav_tab3">Account</string>

    <string name="hello_home_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_profile_fragment_age">24</string>
    <string name="home_profile_fragment_name">Lily</string>
    <string name="home_profile_fragment_bio">Bay Area grown and raised. I discovered backpacking in 2019 and it has become the main event of my weekend warrior antics. Ask me which backpacking permits I\'m applying for this season! I also just love being active in general, whether it means trying to do more frequent runs or taking long walks to San Francisco bakeries to try all their pastries.
    Bay Area grown and raised. I discovered backpacking in 2019 and it has become the main event of my weekend warrior antics. Ask me which backpacking permits I\'m applying for this season! I also just love being active in general, whether it means trying to do more frequent runs or taking long walks to San Francisco bakeries to try all their pastries.</string>
    <string name="person_card_name">Lily</string>
    <string name="person_card_age">24</string>
    <string name="home_profile_fragment_fab">Add Friend</string>
    <string name="home_profile_fragment_interest_1">backpacking</string>
    <string name="home_profile_fragment_interest_2">baking</string>
    <string name="home_profile_fragment_interest_3">photography</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="friends_fragment_text">Hello friends fragment</string>
    <string name="account_fragment_text">Hello account fragment</string>

    <!-- Repository: error messages -->
    <string name="error_message_duplicate_email">User with the provided email is already registered</string>
    <string name="error_message_not_registered_user">User with the provided email is not registered</string>
    <string name="error_message_incorrect_password">Incorrect Password</string>
    <string name="error_message_not_logged_in_user">User is not currently logged in</string>

    <!-- Login Screen -->
    <string name="login_fragment_hint_e_mail">Email address</string>
    <string name="login_fragment_hint_password">Password</string>
    <string name="login_fragment_sign_in">Sign in</string>
    <string name="login_fragment_create_your_account">Create new account</string>
    <string name="login_fragment_label_no_account">No account yet?</string>
    <string name="login_fragment_content_description_application_logo">Application Logo</string>

    <!-- Registration Screen -->
    <string name="registration_fragment_hint_display_name">Display Name</string>
    <string name="registration_fragment_hint_date_of_birth">Date of Birth</string>
    <string name="registration_fragment_hint_email">Email</string>
    <string name="registration_fragment_hint_phone">Phone Number</string>
    <string name="registration_fragment_hint_password">Password</string>
    <string name="registration_fragment_hint_confirm_password">Confirm Password</string>
    <string name="registration_fragment_hint_bio">Tell the world who you are</string>
    <string name="registration_fragment_hint_featured_interests">Choose your featured interests</string>
    <string name="registration_fragment_hint_interests">Choose your interests</string>
    <string name="registration_fragment_get_started">Get Started</string>
    <string name="registration_fragment_content_description_image_profile">Profile Image</string>

    <!-- Account Screen -->
    <string name="account_fragment_message_profile_updated">Your Profile has been successfully updated</string>
    <string name="account_fragment_message_profile_update_error">An error has occurred while updating your profile: %s</string>
    <string name="account_fragment_label_availability">Availability</string>
    <string name="account_fragment_button_save">Save</string>
    <string name="account_fragment_menu_logout">Logout</string>
    <string name="account_fragment_menu_view">View</string>

    <!-- Validation Errors -->
    <string name="error_validation_blank">Should not be blank</string>
    <string name="error_validation_date_of_birth_too_young">You should be at least 16 years old</string>
    <string name="error_validation_password_does_not_match">Does not match password</string>

    <!-- Profile Screen -->
    <string name="friend_add_confirmation">Friend added.</string>
    <string name="friend_remove_confirmation">Friend removed.</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="search">search</string>
    <string name="distance_away_template">%s miles away</string>
    <string name="person_name_template">%s,</string>
    <string name="send_sms_template">Hi %s, I\'m %s from Friender!</string>

    <!-- Logout confirmation dialog -->
    <string name="dialog_message_logout">Are you sure you want to logout?</string>
    <string name="dialog_button_logout">Logout</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="friends_fragment_title">Friends</string>

    <!-- Friends Screen -->
    <string name="friends_recycler_empty_state_subtext">Start adding friends in Discover</string>
    <string name="friends_recycler_empty_state_text">No friends yet</string>

</resources>